# EverBee

./: .gitignore  ANALYSIS.md  CONTEXT_HANDOFF.md  DEBUG_LOG.md  DEVELOPMENT.md  README.md  build.gradle.kts  findings.md  gradle.properties  progress.md  settings.gradle.kts  task_plan.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/apislens/: ApisLensApp.kt  MainActivity.kt
app/src/main/java/com/apislens/data/local/: AppDatabase.kt
app/src/main/java/com/apislens/di/: DatabaseModule.kt
app/src/main/java/com/apislens/event/: DataSyncEventBus.kt
app/src/main/java/com/apislens/rust/: RustCore.kt
app/src/main/java/com/apislens/utils/: CostCalculator.kt  RelativeTimeFormatter.kt
app/src/main/java/com/apislens/worker/: ChargeReminderWorker.kt
app/src/main/res/drawable/: bg_fab.xml  bg_fab_ripple.xml  ic_devices.xml  ic_preset_tablet.xml  ic_preset_watch.xml  ic_timer.xml
app/src/main/res/layout/: activity_main.xml  fragment_add_charge_record.xml  fragment_add_edit_device.xml  fragment_add_usage_record.xml  fragment_dashboard.xml  fragment_device_detail.xml  fragment_device_list.xml  fragment_settings.xml  item_device.xml  item_device_cost.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
rust-core/: Cargo.toml
rust-core/scripts/: build-android.sh
rust-core/src/: calculator.rs  jni_bridge.rs  lib.rs  models.rs
(+61 files in other folders)
