[package]
name = "apislens-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "apislens_core"
crate-type = ["cdylib", "lib"]

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
